tests/baselines/reference/redeclareParameterInCatchBlock(strict=true).errors.txt
redeclareParameterInCatchBlock.ts(4,11): error TS2492: Cannot redeclare identifier 'e' in catch clause.
redeclareParameterInCatchBlock.ts(10,9): error TS2492: Cannot redeclare identifier 'e' in catch clause.
redeclareParameterInCatchBlock.ts(15,10): error TS2488: Type 'unknown' must have a '[Symbol.iterator]()' method that returns an iterator.
redeclareParameterInCatchBlock.ts(16,15): error TS2492: Cannot redeclare identifier 'b' in catch clause.
redeclareParameterInCatchBlock.ts(21,12): error TS2339: Property 'a' does not exist on type 'unknown'.
redeclareParameterInCatchBlock.ts(21,15): error TS2451: Cannot redeclare block-scoped variable 'x'.
redeclareParameterInCatchBlock.ts(21,18): error TS2339: Property 'b' does not exist on type 'unknown'.
redeclareParameterInCatchBlock.ts(21,21): error TS2451: Cannot redeclare block-scoped variable 'x'.


==== redeclareParameterInCatchBlock.ts (8 errors) ====
    try {
    
    } catch(e) {
        const e = null;
              ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch(e) {
        let e;
            ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch ([a, b]) {
             ~~~~~~
!!! error TS2488: Type 'unknown' must have a '[Symbol.iterator]()' method that returns an iterator.
        const [c, b] = [0, 1];
                  ~
!!! error TS2492: Cannot redeclare identifier 'b' in catch clause.
    }
    
    try {
    
    } catch ({ a: x, b: x }) {
               ~
!!! error TS2339: Property 'a' does not exist on type 'unknown'.
                  ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
                     ~
!!! error TS2339: Property 'b' does not exist on type 'unknown'.
                        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
    
    }
    
    try {
    
    } catch(e) {
        function test() {
            let e;
        }
    }
    